--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref
 crispy-bootstrap5
+dj-database-url  
 Django
 django-crispy-forms
 django-email
@@ -14,6 +15,7 @@ opencv-contrib-python
 Pillow
 protobuf
 psycopg2
+psycopg2-binary
 PyAutoGUI
 PyGetWindow
 PyMsgBox
@@ -23,4 +25,5 @@ pyscreenshot
 PyScreeze
 pytweening
 sqlparse
+typing_extensions
 tzdata
